fixed spacing on homepage text

--- a/client/src/styles/layout/_page.scss
+++ b/client/src/styles/layout/_page.scss
@@ -10,7 +10,7 @@
     color: $font-bright;
   }
   section {
-    width: 100%;
+    width: 45%;
   }
   button {
     margin-top: 20px; 
@@ -26,6 +26,9 @@
     width: calc(100% - 5vw);
     h2 {
       margin: 50px 0 20px 0;
+    }
+    section {
+      width: 100%;
     }
   }
 }
